chore: added hyperswitch bundle

--- a/example/package.json
+++ b/example/package.json
@@ -10,8 +10,11 @@
     "build:ios": "react-native build-ios --mode Debug"
   },
   "dependencies": {
+    "@sentry/react-native": "^6.20.0",
     "react": "19.0.0",
-    "react-native": "0.79.2"
+    "react-native": "0.79.2",
+    "react-native-inappbrowser-reborn": "^3.7.0",
+    "react-native-svg": "^15.12.1"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
