--- a/android/build.gradle
+++ b/android/build.gradle
@@ -74,4 +74,7 @@ def kotlin_version = getExtOrDefault("kotlinVersion")
 dependencies {
   implementation "com.facebook.react:react-android"
   implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
+  implementation project(":react-native-inappbrowser-reborn")
+  implementation project(":react-native-svg")
+  implementation project(":sentry_react-native")
 }
