--- a/android/src/main/AndroidManifest.xml
+++ b/android/src/main/AndroidManifest.xml
@@ -1,2 +1,8 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android">
+
+  <application android:enableOnBackInvokedCallback="true">
+    <meta-data android:name="com.google.android.gms.wallet.api.enabled" android:value="true" />
+    <activity android:name="com.hyperswitchsdkreactnative.payment.gpay.GooglePayActivity" android:exported="false">
+    </activity>
+  </application>
 </manifest>
