--- a/example/package.json
+++ b/example/package.json
@@ -13,7 +13,11 @@
     "@sentry/react-native": "^6.20.0",
     "react": "19.0.0",
     "react-native": "0.79.2",
+    "react-native-gesture-handler": "^2.28.0",
     "react-native-inappbrowser-reborn": "^3.7.0",
+    "react-native-pager-view": "^6.9.1",
+    "react-native-safe-area-context": "^5.6.1",
+    "react-native-screens": "^4.15.2",
     "react-native-svg": "^15.12.1"
   },
   "devDependencies": {
