--- a/example/package.json
+++ b/example/package.json
@@ -7,7 +7,8 @@
     "ios": "react-native run-ios",
     "start": "react-native start",
     "build:android": "react-native build-android --extra-params \"--no-daemon --console=plain -PreactNativeArchitectures=arm64-v8a\"",
-    "build:ios": "react-native build-ios --mode Debug"
+    "build:ios": "react-native build-ios --mode Debug",
+    "server": "node server.js"
   },
   "dependencies": {
     "@sentry/react-native": "^6.20.0",
@@ -31,6 +32,9 @@
     "@react-native/metro-config": "0.79.2",
     "@react-native/typescript-config": "0.79.2",
     "@types/react": "^19.0.0",
+    "cors": "^2.8.5",
+    "dotenv": "^17.2.1",
+    "express": "^5.1.0",
     "react-native-builder-bob": "^0.40.8",
     "react-native-monorepo-config": "^0.1.9"
   },
