chore: base structure setup

--- a/example/package.json
+++ b/example/package.json
@@ -6,6 +6,7 @@
     "android": "react-native run-android",
     "ios": "react-native run-ios",
     "start": "react-native start",
+    "server": "node server.js",
     "build:android": "react-native build-android --extra-params \"--no-daemon --console=plain -PreactNativeArchitectures=arm64-v8a\"",
     "build:ios": "react-native build-ios --mode Debug"
   },
@@ -27,7 +28,11 @@
     "@react-native/metro-config": "0.79.2",
     "@react-native/typescript-config": "0.79.2",
     "@types/react": "^19.0.0",
+    "cors": "^2.8.5",
+    "dotenv": "^17.2.1",
+    "express": "^5.1.0",
     "react-native-builder-bob": "^0.40.8",
+    "react-native-dotenv": "^3.4.11",
     "react-native-monorepo-config": "^0.1.9"
   },
   "engines": {
