--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,12 +4,14 @@
     "paths": {
       "hyperswitch-sdk-react-native": ["./src/index"]
     },
+    "allowImportingTsExtensions": true,
+    "allowJs": true,
     "allowUnreachableCode": false,
     "allowUnusedLabels": false,
     "esModuleInterop": true,
     "forceConsistentCasingInFileNames": true,
     "jsx": "react-jsx",
-    "lib": ["ESNext"],
+    "lib": ["ESNext", "DOM", "DOM.Iterable"],
     "module": "ESNext",
     "moduleResolution": "bundler",
     "noEmit": true,
