--- a/.gitignore
+++ b/.gitignore
@@ -54,6 +54,7 @@ node_modules/
 npm-debug.log
 yarn-debug.log
 yarn-error.log
+.env
 
 # BUCK
 buck-out/
@@ -84,3 +85,8 @@ android/generated
 
 # React Native Nitro Modules
 nitrogen/
+
+# Rescript
+.bsb.lock
+*.res.js
+*.gen.tsx
