--- a/package.json
+++ b/package.json
@@ -32,10 +32,14 @@
     "!**/.*"
   ],
   "scripts": {
+    "re:start": "rescript build -w",
+    "re:format": "rescript format -all",
+    "re:build": "rescript",
+    "re:clean": "rescript clean",
     "example": "yarn workspace hyperswitch-sdk-react-native-example",
     "test": "jest",
     "typecheck": "tsc",
-    "lint": "eslint \"**/*.{js,ts,tsx}\"",
+    "lint": "eslint \"**/*.{tsx,res}\"",
     "clean": "del-cli android/build example/android/build example/android/app/build example/ios/build lib",
     "prepare": "bob build",
     "release": "release-it --only-version"
@@ -68,8 +72,11 @@
     "@react-native/babel-preset": "0.79.2",
     "@react-native/eslint-config": "^0.78.0",
     "@release-it/conventional-changelog": "^9.0.2",
-    "@types/jest": "^29.5.5",
-    "@types/react": "^19.0.0",
+    "@rescript/core": "^1.6.1",
+    "@rescript/react": "^0.14.0",
+    "@types/jest": "^30.0.0",
+    "@types/react": "^19.1.11",
+    "@types/react-dom": "^19.1.8",
     "commitlint": "^19.6.1",
     "del-cli": "^5.1.0",
     "eslint": "^9.22.0",
@@ -81,6 +88,8 @@
     "react-native": "0.79.2",
     "react-native-builder-bob": "^0.40.8",
     "release-it": "^17.10.0",
+    "rescript": "11",
+    "rescript-react-native": "^0.78.0",
     "turbo": "^1.10.7",
     "typescript": "^5.8.3"
   },
@@ -157,6 +166,12 @@
     "jsSrcsDir": "src/specs",
     "android": {
       "javaPackageName": "com.hyperswitchsdkreactnative"
+    },
+    "ios": {
+      "componentProvider": {
+        "HyperswitchSdkReactNativeView": "HyperswitchSdkReactNativeView",
+        "ApplePayView": "ApplePayView"
+      }
     }
   },
   "create-react-native-library": {
