--- a/android/build.gradle
+++ b/android/build.gradle
@@ -58,7 +58,8 @@ android {
     main {
       java.srcDirs += [
         "generated/java",
-        "generated/jni"
+        "generated/jni",
+        "build/generated/source/packagelist"
       ]
     }
   }
@@ -75,7 +76,7 @@ dependencies {
   implementation "com.facebook.react:react-android"
   implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
   implementation "com.google.android.gms:play-services-wallet:19.4.0"
-  implementation project(":react-native-inappbrowser-reborn")
-  implementation project(":react-native-svg")
-  implementation project(":sentry_react-native")
 }
+
+apply from: "./hyperswitch_autolinking.gradle"
+applyHyperswitchAutolinking(project)
