--- a/android/build.gradle
+++ b/android/build.gradle
@@ -79,10 +79,7 @@ dependencies {
   implementation "com.facebook.react:react-android"
   implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
   implementation "com.google.android.gms:play-services-wallet:19.4.0"
-  implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:2.9.2"
-  implementation 'androidx.navigation:navigation-fragment-ktx:2.9.3'
-
-  implementation "androidx.lifecycle:lifecycle-livedata-ktx:2.9.3"
+  implementation 'androidx.activity:activity-ktx:1.10.1'
 }
 
 
