--- a/android/src/main/AndroidManifest.xml
+++ b/android/src/main/AndroidManifest.xml
@@ -1,9 +1,9 @@
 <manifest xmlns:tools="http://schemas.android.com/tools"
   xmlns:android="http://schemas.android.com/apk/res/android">
-  <application android:enableOnBackInvokedCallback="true"
-    tools:targetApi="33">
+  <application >
     <meta-data android:name="com.google.android.gms.wallet.api.enabled" android:value="true" />
-    <activity android:name="com.hyperswitchsdkreactnative.gpay.GooglePayActivity" android:exported="false">
+    <activity android:enableOnBackInvokedCallback="true"
+      tools:targetApi="33" android:name="com.hyperswitchsdkreactnative.gpay.GooglePayActivity" android:exported="false">
     </activity>
   </application>
 </manifest>
