--- a/android/build.gradle
+++ b/android/build.gradle
@@ -33,6 +33,8 @@ android {
   defaultConfig {
     minSdkVersion getExtOrIntegerDefault("minSdkVersion")
     targetSdkVersion getExtOrIntegerDefault("targetSdkVersion")
+    versionCode 1
+    versionName "1.0"
   }
 
   buildFeatures {
@@ -42,16 +44,25 @@ android {
   buildTypes {
     release {
       minifyEnabled false
+      proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
+    }
+    debug {
+      debuggable true
     }
   }
 
   lintOptions {
     disable "GradleCompatible"
+    abortOnError false
   }
 
   compileOptions {
-    sourceCompatibility JavaVersion.VERSION_1_8
-    targetCompatibility JavaVersion.VERSION_1_8
+    sourceCompatibility JavaVersion.VERSION_17
+    targetCompatibility JavaVersion.VERSION_17
+  }
+
+  kotlinOptions {
+    jvmTarget = '17'
   }
 
   sourceSets {
@@ -62,6 +73,12 @@ android {
         "build/generated/source/packagelist"
       ]
     }
+  }
+
+  packagingOptions {
+    pickFirst '**/libc++_shared.so'
+    pickFirst '**/libfbjni.so'
+    pickFirst '**/libreactnativejni.so'
   }
 }
 
@@ -80,6 +97,8 @@ dependencies {
   implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
   implementation "com.google.android.gms:play-services-wallet:19.4.0"
   implementation 'androidx.activity:activity-ktx:1.10.1'
+  implementation("org.greenrobot:eventbus")
+  // implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.8.7'
+  // implementation 'androidx.lifecycle:lifecycle-common-java8:2.8.7'
+  // implementation 'androidx.fragment:fragment-ktx:1.8.5'
 }
-
-
